--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,14 @@
   <div id="header">
     <div class="grid-container">
       <%= link_to( image_tag('logo_push.png', id: 'logo-push'), root_url )%>
-      <%= yield :header %>
-      <a id="download-deck" class="button icon-download" href="website-creative.pdf" title="Download Deck">
-        <span>Download Deck</span>
-      </a>
+      
+        <div class="six columns"><%= yield :header %></div>
+        <div class="six columns">
+          <a id="download-deck" class="button icon-download" href="website-creative.pdf" title="Download Deck">
+            <span>Download Deck</span>
+          </a>
+        </div> <!-- end six columns -->
+
     </div>
   </div>
 
